# mercadolivre-scraping-kafka

./: README.md  docker-compose.yml  pyproject.toml
src/: discount_consumer.py  mercadolivre_scraping.py  offer_consumer.py  offer_producer.py
src/config/: kafka_config.py
src/database/: connection.py
src/model/: modelOffers.py
